zen-elasticsearch/zen-elasticsearch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zen-elasticsearch
  namespace: zen-elasticsearch
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web  # HTTP only
spec:
  ingressClassName: traefik
  rules:
    - host: zen-es.stone-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zen-elasticsearch
                port:
                  number: 9200
